--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "^0.563.0",
     "mongoose": "^9.1.1",
     "motion": "^12.23.26",
     "next": "16.1.1",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
