--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-email/render": "^2.0.2",
     "@reduxjs/toolkit": "^2.11.2",
     "@types/leaflet": "^1.9.21",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "argon2": "^0.44.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
