--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
+    "react-virtuoso": "^4.18.1",
     "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0",
     "winston": "^3.19.0",
